@@ -1,19 +1,69 @@
 <map version="0.8.0">
 <!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
-<node CREATED="1181674694562" ID="Freemind_Link_1434727005" MODIFIED="1181674704875" TEXT="Replication">
+<node BACKGROUND_COLOR="#ffccff" CREATED="1181674694562" ID="Freemind_Link_1434727005" MODIFIED="1181914696656" TEXT="Replication">
 <node CREATED="1181822615515" HGAP="24" ID="_" MODIFIED="1181822667046" POSITION="right" TEXT="Architecture" VSHIFT="-23">
-<node CREATED="1181822621484" HGAP="21" ID="Freemind_Link_1873027931" MODIFIED="1181822664578" TEXT="1+1" VSHIFT="-43"/>
+<node CREATED="1181914068421" ID="Freemind_Link_566990712" MODIFIED="1181914072765" TEXT="Pull" VSHIFT="-13"/>
+<node CREATED="1181919614859" ID="Freemind_Link_898242167" MODIFIED="1181919630687" TEXT="Dual Machines">
+<node CREATED="1181919632328" ID="Freemind_Link_1530068136" MODIFIED="1181919635531" TEXT="Primary"/>
+<node CREATED="1181919636468" ID="Freemind_Link_247903647" MODIFIED="1181919638000" TEXT="Secondary"/>
 </node>
-<node CREATED="1181822705625" ID="Freemind_Link_1160731886" MODIFIED="1181822708015" POSITION="left" TEXT="States">
-<node CREATED="1181822709218" ID="Freemind_Link_590602912" MODIFIED="1181822762468" TEXT="Master"/>
-<node CREATED="1181822764218" ID="Freemind_Link_1328293276" MODIFIED="1181822822562" TEXT="Standby" VSHIFT="8">
-<node CREATED="1181822779203" ID="Freemind_Link_302424341" MODIFIED="1181822785671" TEXT="Replicating">
-<node CREATED="1181822957000" HGAP="34" ID="Freemind_Link_552687453" MODIFIED="1181822980187" TEXT="Waiting for Master" VSHIFT="-6"/>
 </node>
-<node CREATED="1181822788328" ID="Freemind_Link_610538323" MODIFIED="1181822976812" TEXT="Not Replicating" VSHIFT="17">
-<node CREATED="1181822893656" ID="Freemind_Link_176730370" MODIFIED="1181822922656" TEXT="Master not found"/>
-<node CREATED="1181822923796" ID="Freemind_Link_268486424" MODIFIED="1181822940328" TEXT="Waiting for Master"/>
+<node CREATED="1181913500796" ID="Freemind_Link_1341023493" MODIFIED="1181913504171" POSITION="right" TEXT="Availability"/>
+<node CREATED="1181914252578" HGAP="28" ID="Freemind_Link_1348227894" MODIFIED="1181917122421" POSITION="left" TEXT="Elements" VSHIFT="-32">
+<node CREATED="1181914265031" ID="Freemind_Link_1983361608" MODIFIED="1181914308265" TEXT="Database Records" VSHIFT="-6">
+<node CREATED="1181914316671" ID="Freemind_Link_1260678099" MODIFIED="1181914318406" TEXT="Pages"/>
+<node CREATED="1181914320718" ID="Freemind_Link_1634212434" MODIFIED="1181914322609" TEXT="Logs"/>
 </node>
+<node CREATED="1181914273718" ID="Freemind_Link_1507565771" MODIFIED="1181914275015" TEXT="Files">
+<node CREATED="1181914294734" ID="Freemind_Link_191778280" MODIFIED="1181914305953" TEXT="NS_IMAGE namespace" VSHIFT="18"/>
+</node>
+</node>
+<node BACKGROUND_COLOR="#ffffff" CREATED="1181914795015" HGAP="42" ID="Freemind_Link_1822313787" MODIFIED="1181916920234" POSITION="right" TEXT="Cases" VSHIFT="88">
+<font BOLD="true" NAME="SansSerif" SIZE="18"/>
+<node BACKGROUND_COLOR="#99ff99" CREATED="1181914847421" HGAP="35" ID="Freemind_Link_776275411" MODIFIED="1181916865250" TEXT="Normal" VSHIFT="-20">
+<node CREATED="1181914851312" ID="Freemind_Link_703134303" MODIFIED="1181915021734" TEXT="Primary online"/>
+<node CREATED="1181914856734" ID="Freemind_Link_1787420551" MODIFIED="1181915018031" TEXT="Secondary online &amp; replicating"/>
+</node>
+<node CREATED="1181914868812" ID="Freemind_Link_77740929" MODIFIED="1181915005250" TEXT="Secondary offline">
+<icon BUILTIN="flag"/>
+<node BACKGROUND_COLOR="#99ff99" CREATED="1181914905140" HGAP="22" ID="Freemind_Link_1980662934" MODIFIED="1181916449000" TEXT="Primary online" VSHIFT="-1"/>
+<node CREATED="1181915945078" HGAP="21" ID="Freemind_Link_1400590028" MODIFIED="1181915964828" TEXT="Primary offline" VSHIFT="6">
+<icon BUILTIN="clanbomber"/>
+</node>
+</node>
+<node BACKGROUND_COLOR="#ff0000" CREATED="1181914918640" HGAP="32" ID="Freemind_Link_1246740511" MODIFIED="1181915074906" TEXT="Primary offline" VSHIFT="29">
+<icon BUILTIN="messagebox_warning"/>
+<node CREATED="1181915027078" HGAP="33" ID="Freemind_Link_355049439" MODIFIED="1181915911921" TEXT="1) Secondary online" VSHIFT="-13">
+<node BACKGROUND_COLOR="#99ff99" CREATED="1181915731328" ID="Freemind_Link_1619392747" MODIFIED="1181916914031" TEXT="Can assume Master role">
+<font NAME="SansSerif" SIZE="12"/>
+</node>
+<node CREATED="1181915746812" ID="Freemind_Link_1144785125" MODIFIED="1181916413265" TEXT="Can&apos;t assume Master role">
+<icon BUILTIN="clanbomber"/>
+</node>
+</node>
+<node CREATED="1181915036078" HGAP="29" ID="Freemind_Link_247818517" MODIFIED="1181915728031" TEXT="2) Secondary offline" VSHIFT="21">
+<icon BUILTIN="clanbomber"/>
+</node>
+</node>
+</node>
+<node CREATED="1181917128984" ID="Freemind_Link_1264762810" MODIFIED="1181917132875" POSITION="left" TEXT="States">
+<node CREATED="1181917135015" ID="Freemind_Link_1577882259" MODIFIED="1181917263390" TEXT="Primary&#xa;(machine)">
+<node CREATED="1181917170484" ID="Freemind_Link_1361148998" MODIFIED="1181917172250" TEXT="Online">
+<node CREATED="1181917176281" ID="Freemind_Link_1900873208" MODIFIED="1181917177968" TEXT="Master"/>
+<node CREATED="1181917179609" ID="Freemind_Link_1819682870" MODIFIED="1181917198859" TEXT="Slave"/>
+<node CREATED="1181917361656" ID="Freemind_Link_1259354482" MODIFIED="1181917382906" TEXT="Holding for Master role"/>
+<node CREATED="1181917383468" ID="Freemind_Link_1469628651" MODIFIED="1181917387890" TEXT="Holding for Slave role"/>
+</node>
+<node CREATED="1181917172718" ID="Freemind_Link_1836861777" MODIFIED="1181917174218" TEXT="Offline"/>
+</node>
+<node CREATED="1181917147921" ID="Freemind_Link_275449338" MODIFIED="1181917281515" TEXT="Secondary&#xa;(machine)">
+<node CREATED="1181917225171" ID="Freemind_Link_96462217" MODIFIED="1181917227312" TEXT="Online">
+<node CREATED="1181917232062" ID="Freemind_Link_928402645" MODIFIED="1181917234937" TEXT="Slave"/>
+<node CREATED="1181917235546" ID="Freemind_Link_874535015" MODIFIED="1181917236718" TEXT="Master"/>
+<node CREATED="1181917392296" ID="Freemind_Link_1694913142" MODIFIED="1181917396750" TEXT="Holding for Slave role"/>
+<node CREATED="1181917397265" ID="Freemind_Link_1743034112" MODIFIED="1181917400953" TEXT="Holding for Master role"/>
+</node>
+<node CREATED="1181917227734" ID="Freemind_Link_364828923" MODIFIED="1181917229093" TEXT="Offline"/>
 </node>
 </node>
 </node>
